# tmcr-hash-finder

./: .gitignore  all.js  cabal.project  out.frefs.js  out.frefs.json  out.js  out.stats
static/: style.css
tmcr-hash-finder/: CHANGELOG.md  default.nix  tmcr-hash-finder.cabal
tmcr-hash-finder/app/: Main.hs
tmcr-hash-finder/src/Data/TMCR/: HashIcons.hs
variety/: all.js  out.js  out.stats
