cabal-version:       2.4

name:                tmcr-hash-finder
version:             0.1.0.0
synopsis:            Utilty for finding the settings hash from settings or the reverse
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Ibot02
maintainer:          jtp.jtp@gmx.de
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Digest.CRC32
                     , Data.TMCR.HashIcons
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , bytestring
                     , array
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tmcr-hash-finder-app
  main-is: Main.hs
  build-depends:       base
                     , tmcr-hash-finder
                     , miso
                     , containers
                     , bytestring
                     , lens
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite tmcr-hash-finder-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base
